--- a/app/src/main/res/layout/activity_ride_mode_on.xml
+++ b/app/src/main/res/layout/activity_ride_mode_on.xml
@@ -75,10 +75,10 @@
         android:id="@+id/tv_speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="monospace"
+        android:fontFamily="@font/digital_7"
         android:text="0.00 KMPH"
         android:textColor="@color/colorAccent"
-        android:textSize="30sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/carEmergency"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
