--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryDark">#00647D</color>
-    <color name="colorAccent">#00647D</color>
+    <color name="colorAccent">#CFFDFF</color>
     <color name="background">#CFFDFF</color>
 </resources>
